--- a/arch/arm/boot/dts/dra72-evm-common.dtsi
+++ b/arch/arm/boot/dts/dra72-evm-common.dtsi
@@ -221,6 +221,19 @@
 			0x36C	(PIN_INPUT_PULLUP | MUX_MODE0)	/* mmc1_sdcd.mmc1_sdcd */
 		>;
 	};
+	dcan1_pins_default: dcan1_pins_default {
+		pinctrl-single,pins = <
+			0x3d0   (PIN_OUTPUT_PULLUP | MUX_MODE0)	/* dcan1_tx */
+			0x418   (PULL_UP | MUX_MODE1)		/* wakeup0.dcan1_rx */
+		>;
+	};
+
+	dcan1_pins_sleep: dcan1_pins_sleep {
+		pinctrl-single,pins = <
+			0x3d0   (MUX_MODE15 | PULL_UP)	/* dcan1_tx.off */
+			0x418   (MUX_MODE15 | PULL_UP)	/* wakeup0.off */
+		>;
+	};
 
 	mmc2_pins_default: mmc2_pins_default {
 		pinctrl-single,pins = <
@@ -782,6 +795,9 @@ i2c_p3_exp: &i2c5 {
 
 &dcan1 {
 	status = "ok";
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&dcan1_pins_default>;
+	pinctrl-1 = <&dcan1_pins_sleep>;
 };
 
 &vip1 {
